fix missing descriptions

--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -16,7 +16,7 @@
   "publicatiedatum": "TBD",
   "type_toepassing": "TBD",
   "categorie": "Vocabularium & applicatieprofielen",
-  "beschrijving": "ap-bodemenondergrond.md",
+  "beschrijving": "bodemenondergrond.md",
   "specificatiedocument": [
     {
       "naam": "AP Grondboringen",
