--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -68,6 +68,18 @@
     {
       "naam": "Presentatie thematische werkgroep 3 - 27 oktober 2020",
       "waarde": "20201027 - OSLO Bodem en Ondergrond - Thematische Werkgroep 3 - Presentatie.pdf"
+    },
+    {
+      "naam": "Presentatie werkgroep bodem - 30 maart 2021",
+      "waarde": "20200330 - OSLO Bodem en Ondergrond - Werkgroep Bodem - Presentatie.pdf"
+    },
+    {
+      "naam": "Presentatie webinar grondwatermeetnet en sondering - 19 april 2021",
+      "waarde": "20210419 - OSLO Bodem en Ondergrond - Webinar Grondwatermeetnet en sondering - Presentatie.pdf"
+    },
+    {
+      "naam": "Presentatie Werkgroep bodemanalyse en bodemverontreiniging - 3 mei 2021",
+      "waarde": "20210503 - OSLO Bodem en Ondergrond - Webinar Bodemanalyse en bodemverontreiniging - Presentatie.pdf"
     }
   ],
   "functioneel_toepassingsgebied": "Semantische standaard voor informatie over bodem en ondergrond",
