--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -79,7 +79,7 @@
     },
     {
       "naam": "Presentatie Werkgroep bodemanalyse en bodemverontreiniging - 3 mei 2021",
-      "waarde": "20210503 - OSLO Bodem en Ondergrond - Webinar Bodemanalyse en bodemverontreiniging - Presentatie.pdf"
+      "waarde": "20210503 - OSLO Bodem en Ondergrond - Werkgroep Bodemanalyse en bodemverontreiniging - Presentatie.pdf"
     }
   ],
   "functioneel_toepassingsgebied": "Semantische standaard voor informatie over bodem en ondergrond",
