--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -80,6 +80,10 @@
     {
       "naam": "Presentatie Werkgroep bodemanalyse en bodemverontreiniging - 3 mei 2021",
       "waarde": "20210503 - OSLO Bodem en Ondergrond - Werkgroep Bodemanalyse en bodemverontreiniging - Presentatie.pdf"
+    },
+    {
+      "naam": "Presentatie Werkgroep consolidatie - 31 mei 2021",
+      "waarde": "20210531 - OSLO Bodem en Ondergrond - Werkgroep Consolidatie - Presentatie.pdf"
     }
   ],
   "functioneel_toepassingsgebied": "Semantische standaard voor informatie over bodem en ondergrond",
