--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -84,6 +84,14 @@
     {
       "naam": "Presentatie Werkgroep consolidatie - 31 mei 2021",
       "waarde": "20210531 - OSLO Bodem en Ondergrond - Werkgroep Consolidatie - Presentatie.pdf"
+    },
+    {
+      "naam": "Presentatie Werkgroep Themas - 21 juni 2021",
+      "waarde": "20210621 - OSLO Bodem en Ondergrond - Werkgroep Themas - Presentatie.pdf"
+    },
+    {
+      "naam": "Presentatie Afsluitend Webinar - 28 juni 2021",
+      "waarde": "20210628 - OSLO Bodem en Ondergrond - Afsluitend Webinar - Presentatie.pdf"
     }
   ],
   "functioneel_toepassingsgebied": "Semantische standaard voor informatie over bodem en ondergrond",
