--- a/bodemenondergrond-config.json
+++ b/bodemenondergrond-config.json
@@ -20,43 +20,43 @@
   "specificatiedocument": [
     {
       "naam": "AP Grondboringen",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondboringen/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondboringen/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Bodem",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bodem/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bodem/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Grondwatermeetnet",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondwatermeetnet/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondwatermeetnet/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Sonderingen",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Bodem en Ondergrond",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bodem-en-ondergrond/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bodem-en-ondergrond/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Ruimtelijke bereiken",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/ruimtelijke-bereiken/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/ruimtelijke-bereiken/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Observaties en Metingen",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties-en-metingen/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties-en-metingen/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Sensoren en Bemonstering",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering/ontwerpstandaard/2021-08-01"
     },
     {
       "naam": "AP Bodem en Ondergrond Observaties",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-observaties/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-observaties/ontwerpstandaard/2021-08-01"
     },
      {
       "naam": "AP Bodem en Ondergrond Interpretaties",
-      "waarde": "https://test.data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-interpretaties/ontwerpstandaard/2021-08-01"
+      "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-interpretaties/ontwerpstandaard/2021-08-01"
     }
   ],
   "documentatie": [],
