--- a/bodemenondergrond-AP-BodemEnOndergrondInterpretaties-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrondInterpretaties-config.json
@@ -15,7 +15,7 @@
   "identificator_organisatie":  "http://data.vlaanderen.be/id/organisatie/OVO037637",
   "publicatiedatum": "TBD",
   "type_toepassing": "TBD",
-  "categorie": "Applicatieprofielen",
+  "categorie": "Applicatieprofiel",
   "beschrijving": "bodemenondergrond.md",
   "specificatiedocument": [
      {
