--- a/bodemenondergrond-AP-BodemEnOndergrondInterpretaties-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrondInterpretaties-config.json
@@ -19,7 +19,7 @@
   "beschrijving": "bodemenondergrond.md",
   "specificatiedocument": [
      {
-      "naam": "AP Bodem en Ondergrond Interpretaties",
+      "naam": "Applicatieprofiel Bodem en Ondergrond Interpretaties",
       "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-interpretaties/ontwerpstandaard/2021-08-01"
     }
   ],
