--- a/bodemenondergrond-AP-Grondwatermeetnet-config.json
+++ b/bodemenondergrond-AP-Grondwatermeetnet-config.json
@@ -13,13 +13,13 @@
   ],
   "verantwoordelijke_organisatie": "Databank Ondergrond Vlaanderen en OVAM",
   "identificator_organisatie":  "https://data.vlaanderen.be/id/organisatie/OVO027735",
-  "publicatiedatum": "TBD",
-  "type_toepassing": "TBD",
+  "publicatiedatum": "2021-08-01",
+  "type_toepassing": "Aanbevolen (vrijwillig)",
   "categorie": "Applicatieprofiel",
   "beschrijving": "bodemenondergrond.md",
   "specificatiedocument": [
     {
-      "naam": "AP Grondwatermeetnet",
+      "naam": "Applicatieprofiel Grondwatermeetnet",
       "waarde": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondwatermeetnet/ontwerpstandaard/2021-08-01"
     }
   ],
