--- a/bodemenondergrond-VOC-SensorenEnBemonstering-config.json
+++ b/bodemenondergrond-VOC-SensorenEnBemonstering-config.json
@@ -13,13 +13,13 @@
   ],
   "verantwoordelijke_organisatie": "Databank Ondergrond Vlaanderen en OVAM",
   "identificator_organisatie":  "https://data.vlaanderen.be/id/organisatie/OVO027735",
-  "publicatiedatum": "TBD",
-  "type_toepassing": "TBD",
+  "publicatiedatum": "2022-04-28",
+  "type_toepassing": "Aanbevolen (vrijwillig)",
   "categorie": "Vocabularium",
   "beschrijving": "bodemenondergrond.md",
   "specificatiedocument": [
     {
-      "naam": "VOC Sensoren en Bemonstering",
+      "naam": "Vocabularium Sensoren en Bemonstering",
       "waarde": "https://data.vlaanderen.be/doc/vocabularium/sensoren-en-bemonstering/kandidaatstandaard/2022-04-28"
     }
   ],
