--- a/bodemenondergrond-VOC-Grondboringen-config.json
+++ b/bodemenondergrond-VOC-Grondboringen-config.json
@@ -10,11 +10,11 @@
       "resourceReference": "https://data.vlaanderen.be/id/organisatie/OVO027735"
     }
   ],
-  "publicationDate": "2021-08-01",
+  "publicationDate": "2024-09-05",
   "specificationDocuments": [
     {
       "name": "Vocabularium Grondboringen",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/grondboringen/ontwerpstandaard/2021-08-01"
+      "resourceReference": "https://data.vlaanderen.be/ns/grondboringen/"
     }
   ],
   "documentation": [
