--- a/bodemenondergrond-AP-ObservatiesEnMetingen-config.json
+++ b/bodemenondergrond-AP-ObservatiesEnMetingen-config.json
@@ -3,7 +3,7 @@
   "category": "Applicatieprofiel",
   "usage": "Aanbevolen (vrijwillig)",
   "status": "standaard-in-ontwikkeling",
-  "descriptionFileName": "bodemenondergrond.md",
+  "descriptionFileName": "observatiesEnMetingen-ap.md",
   "responsibleOrganisation": [
   {
   "name": "Databank Ondergrond Vlaanderen en OVAM",
