--- a/bodemenondergrond-VOC-SensorenEnBemonstering-config.json
+++ b/bodemenondergrond-VOC-SensorenEnBemonstering-config.json
@@ -3,7 +3,7 @@
   "category": "Vocabularium",
   "usage": "Aanbevolen (vrijwillig)",
   "status": "standaard-in-ontwikkeling",
-  "descriptionFileName": "bodemenondergrond.md",
+  "descriptionFileName": "sensorenEnBemonstering-voc.md",
   "responsibleOrganisation": [
     {
       "name": "Databank Ondergrond Vlaanderen en OVAM",
