--- a/bodemenondergrond-VOC-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrond-config.json
@@ -3,7 +3,7 @@
   "category": "Vocabularium",
   "usage": "Aanbevolen (vrijwillig)",
   "status": "kandidaat-standaard",
-  "descriptionFileName": "bodemenondergrond.md",
+  "descriptionFileName": "bodemEnOndergrond-voc.md",
   "responsibleOrganisation": [
     {
       "name": "Databank Ondergrond Vlaanderen en OVAM",
