--- a/bodemenondergrond-AP-ObservatiesEnMetingen-config.json
+++ b/bodemenondergrond-AP-ObservatiesEnMetingen-config.json
@@ -18,7 +18,10 @@
   }
   ],
   "documentation": [
-  
+  {
+    "name":"ISO 19156:2011 Geographic information — Observations and measurements",
+    "resourceReference":"https://www.iso.org/standard/32574.html"
+  }
   ],
   "reports": [
   {
