--- a/bodemenondergrond-VOC-Grondboringen-config.json
+++ b/bodemenondergrond-VOC-Grondboringen-config.json
@@ -3,7 +3,7 @@
   "category": "Vocabularium",
   "usage": "Aanbevolen (vrijwillig)",
   "status": "standaard-in-ontwikkeling",
-  "descriptionFileName": "bodemenondergrond.md",
+  "descriptionFileName": "bodemenondergrondgrondboringen-voc.md",
   "responsibleOrganisation": [
     {
       "name": "Databank Ondergrond Vlaanderen en OVAM",
@@ -19,80 +19,8 @@
   ],
   "documentation": [
     {
-      "name": "Applicatieprofiel Bodem",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bodem/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Applicatieprofiel Bodem en Ondergrond",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bodem-en-ondergrond/kandidaatstandaard/2022-04-28"
-    },
-    {
-      "name": "Applicatieprofiel Bodem en Ondergrond Interpretaties",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-interpretaties/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Applicatieprofiel Bodem en Ondergrond Observaties",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-observaties/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Applicatieprofiel Grondboringen",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondboringen/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Applicatieprofiel Grondwatermeetnet",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/grondwatermeetnet/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Applicatieprofiel Observaties en Metingen",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/observaties-en-metingen/kandidaatstandaard/2022-04-28"
-    },
-    {
-      "name": "Applicatieprofiel Ruimtelijke bereiken",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/ruimtelijke-bereiken/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Applicatieprofiel Sensoren en Bemonstering",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/kandidaatstandaard/2022-04-28"
-    },
-    {
-      "name": "Applicatieprofiel Sonderingen",
-      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Vocabularium Bodem",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/bodem/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Vocabularium Bodem en Ondergrond",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/bodem-en-ondergrond/kandidaatstandaard/2022-04-28"
-    },
-    {
-      "name": "Vocabularium Bodem en Ondergrond Interpretaties",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/bo-interpretaties/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Vocabularium Bodem en Ondergrond Observaties",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/bo-observaties/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Vocabularium Grondboringen",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/grondboringen/ontwerpstandaard/2021-08-01"
-    },
-    {
-      "name": "Vocabularium Observaties en Metingen",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/observaties-en-metingen/kandidaatstandaard/2022-04-28"
-    },
-    {
-      "name": "Vocabularium Ruimtelijke bereiken",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/ruimtelijke-bereiken/ontwerpstandaard/2021-08-01"
-    },
-    {
       "name": "Vocabularium Sensoren en Bemonstering",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/sensoren-en-bemonstering/kandidaatstandaard/2022-04-28"
-    },
-    {
-      "name": "Vocabularium Sonderingen",
-      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/sonderingen/ontwerpstandaard/2021-08-01"
+      "resourceReference": "https://data.vlaanderen.be/ns/sensoren-en-bemonstering/"
     }
   ],
   "reports": [
