--- a/bodemenondergrond-AP-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrond-config.json
@@ -18,6 +18,10 @@
     }
   ],
   "documentation": [
+        {
+      "name": "Vocabularium Bodem en Ondergrond",
+      "resourceReference": "https://data.vlaanderen.be/ns/bodem-en-ondergrond/"
+    },
    {
      "name":"Applicatieprofiel Observaties en Metingen",
      "resourceReference":"https://data.vlaanderen.be/doc/applicatieprofiel/observaties-en-metingen/"
