--- a/bodemenondergrond-VOC-Grondwatermeetnet-config.json
+++ b/bodemenondergrond-VOC-Grondwatermeetnet-config.json
@@ -14,7 +14,7 @@
   "specificationDocuments": [
     {
       "name": "Vocabularium Grondboringen",
-      "resourceReference": "https://data.vlaanderen.be/ns/grondboringen/"
+      "resourceReference": "https://data.vlaanderen.be/doc/vocabularium/bodem-en-ondergrond/grondboringen/ontwerpstandaard/2021-08-01"
     }
   ],
   "documentation": [
