--- a/bodemenondergrond-AP-Grondboringen-config.json
+++ b/bodemenondergrond-AP-Grondboringen-config.json
@@ -18,6 +18,10 @@
     }
   ],
   "documentation": [
+        {
+      "name": "Vocabularium Grondboringen",
+      "resourceReference": "https://data.vlaanderen.be/ns/grondboringen/"
+    },
     {
       "name": "Applicatieprofiel Sensoren en Bemonstering",
       "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/kandidaatstandaard/2022-04-28"
