--- a/bodemenondergrond-AP-BodemEnOndergrondObservaties-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrondObservaties-config.json
@@ -21,6 +21,10 @@
        {
       "name": "Vocabularium Bodem en Ondergrond Observaties",
       "resourceReference": "https://data.vlaanderen.be/ns/bodem-en-ondergrond/observaties"
+    },
+    {
+      "name": "Applicatieprofiel Sensoren en Bemonstering",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/kandidaatstandaard/2022-04-28"
     }
   ],
   "reports": [
