--- a/bodemenondergrond-VOC-BodemEnOndergrondObservaties-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrondObservaties-config.json
@@ -18,7 +18,10 @@
     }
   ],
   "documentation": [
-    
+        {
+      "name": "Applicatieprofiel Bodem en Ondergrond Observaties",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties/"
+    }
   ],
   "reports": [
     {
