--- a/bodemenondergrond-VOC-ObservatiesEnMetingen-config.json
+++ b/bodemenondergrond-VOC-ObservatiesEnMetingen-config.json
@@ -18,9 +18,9 @@
     }
   ],
   "documentation": [
-    {
-    "name":"ISO 19156:2011 Geographic information — Observations and measurements",
-    "resourceReference":"https://www.iso.org/standard/32574.html"
+  {
+  "name": "Applicatieprofiel Observaties en Metingen",
+  "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/observaties-en-metingen/"
   }
   ],
   "reports": [
