--- a/bodemenondergrond-VOC-RuimtelijkeBereiken-config.json
+++ b/bodemenondergrond-VOC-RuimtelijkeBereiken-config.json
@@ -18,10 +18,10 @@
     }
   ],
   "documentation": [
-   {
-     "name":"ISO 19103 Geographic information — Schema for coverage geometry and functions.",
-     "resourceReference":"https://www.iso.org/standard/40121.html"
-   }
+    {
+      "name": "Applicatieprofiel Ruimtelijke bereiken",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/ruimtelijke-bereiken/"
+    }
   ],
   "reports": [
     {
