--- a/bodemenondergrond-AP-BodemEnOndergrondInterpretaties-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrondInterpretaties-config.json
@@ -21,6 +21,10 @@
      {
       "name": "Vocabularium Bodem en Ondergrond Interpretaties",
       "resourceReference": "https://data.vlaanderen.be/ns/bodem-en-ondergrond/interpretaties/"
+    },
+        {
+      "name": "Applicatieprofiel Sensoren en Bemonstering",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/"
     }
   ],
   "reports": [
