--- a/bodemenondergrond-AP-Grondboringen-config.json
+++ b/bodemenondergrond-AP-Grondboringen-config.json
@@ -25,6 +25,10 @@
     {
       "name": "Applicatieprofiel Sensoren en Bemonstering",
       "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/kandidaatstandaard/2022-04-28"
+    },
+        {
+      "name":"Github",
+      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
     }
   ],
   "reports": [
