--- a/bodemenondergrond-VOC-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrond-config.json
@@ -21,6 +21,10 @@
     {
       "name": "Applicatieprofiel Bodem en Ondergrond",
       "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/"
+    },
+        {
+      "name":"Github",
+      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
     }
   ],
   "reports": [
