--- a/bodemenondergrond-VOC-BodemEnOndergrondInterpretaties-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrondInterpretaties-config.json
@@ -21,7 +21,11 @@
      {
   "name": "Applicatieprofiel Bodem en Ondergrond Interpretaties",
   "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/interpretaties/"
-  }
+  },
+        {
+      "name":"Github",
+      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
+    }
   ],
   "reports": [
     {
