--- a/bodemenondergrond-VOC-BodemEnOndergrondObservaties-config.json
+++ b/bodemenondergrond-VOC-BodemEnOndergrondObservaties-config.json
@@ -21,6 +21,10 @@
         {
       "name": "Applicatieprofiel Bodem en Ondergrond Observaties",
       "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties/"
+    },
+        {
+      "name":"Github",
+      "resourceReference":"https://github.com/Informatievlaanderen/OSLOthema-bodemEnOndergrond"
     }
   ],
   "reports": [
