New name for ap bodem en ondergrond

--- a/bodemenondergrond-AP-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrond-config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Applicatieprofiel Bodem en Ondergrond",
+  "title": "Applicatieprofiel",
   "category": "Applicatieprofiel",
   "usage": "Aanbevolen (vrijwillig)",
   "status": "kandidaat-standaard",
