--- a/bodemenondergrond-AP-BodemEnOndergrond-config.json
+++ b/bodemenondergrond-AP-BodemEnOndergrond-config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Applicatieprofiel",
+  "title": "Applicatieprofiel Bodem en Ondergrond",
   "category": "Applicatieprofiel",
   "usage": "Aanbevolen (vrijwillig)",
   "status": "kandidaat-standaard",
@@ -18,17 +18,17 @@
     }
   ],
   "documentation": [
-        {
+    {
       "name": "Vocabularium Bodem en Ondergrond",
       "resourceReference": "https://data.vlaanderen.be/ns/bodem-en-ondergrond/"
     },
-   {
-     "name":"Applicatieprofiel Observaties en Metingen",
-     "resourceReference":"https://data.vlaanderen.be/doc/applicatieprofiel/observaties-en-metingen/"
-   },
     {
-      "name":"Applicatieprofiel Sensoren en Bemonstering",
-      "resourceReference":"https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/"
+      "name": "Applicatieprofiel Observaties en Metingen",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/observaties-en-metingen/"
+    },
+    {
+      "name": "Applicatieprofiel Sensoren en Bemonstering",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering/"
     }
   ],
   "reports": [
