Added metadata script

--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -93,6 +93,18 @@ jobs:
             exit 1
           fi
 
+      # Create metadata from json
+      - name: Create metadata.json from webuniversum-config.json
+        run: |
+          curl -o html-metadata-generator.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/html-metadata-generator.js
+          node html-metadata-generator.js -i report.jsonld -g nl -m nl -h data.vlaanderen.be -r / -u data.vlaanderen.be -o metadata.json -p "OSLO" 2>&1 | tee metadata.log
+          cat metadata.log
+          cat metadata.log >> "$GITHUB_STEP_SUMMARY"
+          if grep -i "error" metadata.log; then
+            echo "Error found in metadata-generator workflow output"
+            exit 1
+          fi
+
       # run the html-generator
       - name: Run oslo-html-generator
         id: run-html-generator
@@ -114,3 +126,4 @@ jobs:
             ./stakeholders.jsonld
             ./webuniversum-config.json
             ./index.html
+            ./metadata.json
