--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -31,6 +31,8 @@ jobs:
           npm install @oslo-flanders/json-webuniversum-generator
           npm install @oslo-flanders/html-generator
           npm install jsonfile
+          npm install jonsld
+          npm install nunjucks
 
       # Fetch the required keys from the configuration file
       - name: Read key from configuration file
