Added `uris` to the action

--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -33,6 +33,7 @@ jobs:
           npm install jsonfile
           npm install jsonld
           npm install nunjucks
+          npm install collections
 
       # Fetch the required keys from the configuration file
       - name: Read key from configuration file
@@ -101,6 +102,7 @@ jobs:
         run: |
           curl -o linkeddataparser3.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/linkeddataparser3.js
           curl -o html-metadata-generator.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/html-metadata-generator.js
+          curl -o uris.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/html-metadata-generator.js
           node html-metadata-generator.js -i report.jsonld -g nl -m nl -h data.vlaanderen.be -r / -u data.vlaanderen.be -o metadata.json -p "OSLO" 2>&1 | tee metadata.log
           cat metadata.log
           cat metadata.log >> "$GITHUB_STEP_SUMMARY"
