--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -121,14 +121,26 @@ jobs:
             echo "Error found in html-generator workflow output"
             exit 1
           fi
-      # Upload the artifacts
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: reports
-          path: |
-            ./report.jsonld
-            ./stakeholders.jsonld
-            ./webuniversum-config.json
-            ./index.html
-            ./metadata.json
+
+    # Upload the artifacts to the gh-pages branch
+
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
+      - name: Switch to the gh-pages branch
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git checkout -b gh-pages
+
+      - name: Copy artifacts
+        run: |
+          cp report.jsonld stakeholders.jsonld webuniversum-config.json index.html metadata.json .
+
+      - name: Commit and push artifacts
+        run: |
+          git add report.jsonld stakeholders.jsonld webuniversum-config.json index.html metadata.json
+          git commit -m "Upload artifacts for deployment"
+          git push origin gh-pages --force
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
