--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -127,7 +127,7 @@ jobs:
         run: |
           mkdir build
           mv report.jsonld build/
-          mv stakeholders.jsonld build/
+          mv stakeholders.json build/
           mv webuniversum-config.json build/
           mv index.html build/
           mv metadata.json build/
