Added copy action for overview image to script

--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -44,6 +44,9 @@ jobs:
           uml=$(jq -r '.[0].eap' config/${{ github.event.inputs.config-file }})
 
           type=$(jq -r '.[0].type' config/${{ github.event.inputs.config-file }})
+
+          name=$(jq -r '.[0].name' config/${{ github.event.inputs.config-file }})
+
           if [ "$type" = "ap" ]; then
           type="ApplicationProfile"
           elif [ "$type" = "voc" ]; then
@@ -103,6 +106,7 @@ jobs:
           curl -o linkeddataparser3.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/linkeddataparser3.js
           curl -o html-metadata-generator.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/html-metadata-generator.js
           curl -o uris.js https://raw.githubusercontent.com/Informatievlaanderen/OSLO-SpecificationGenerator/refs/heads/dev4.0/html-metadata-generator.js
+
           node html-metadata-generator.js -i report.jsonld -g nl -m nl -h data.vlaanderen.be -r / -u data.vlaanderen.be -o metadata.json -p "OSLO metadata generator " 2>&1 | tee metadata.log
           cat metadata.log >> "$GITHUB_STEP_SUMMARY"
           if grep -i "error" metadata.log; then
@@ -131,6 +135,7 @@ jobs:
           mv webuniversum-config.json build/
           mv index.html build/
           mv metadata.json build/
+          mv site-skeleton/${{ steps.read-config.outputs.name }}/overview.jpg build/html
 
       # Upload the artifacts
       - name: Upload artifacts
@@ -139,7 +144,7 @@ jobs:
           name: build-artifacts
           path: build/
 
-  build-and-deploy:
+  download-artifacts-and-deploy:
     needs: convert-eap-and-generate-artifacts
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
