--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -56,6 +56,7 @@ jobs:
           echo "diagramName=$diagram" >> "$GITHUB_OUTPUT"
           echo "umlFile=$uml" >> "$GITHUB_OUTPUT"
           echo "specificationType=$type" >> "$GITHUB_OUTPUT"
+          echo "name=$name" >> "$GITHUB_OUTPUT"
 
       # Run the converter
       - name: Run oslo-converter-ea
